# Knowledge_Bro

./: .gitignore  README.md  devenv.nix
extension/knowledge-bro/: package.json  pnpm-lock.yaml
server/: database.db  pyproject.toml
server/app/: main.py
server/app/db/: __init__.py  database.db  db.py  models.py
server/app/routes/: __init__.py  content.py  dashboard.py  tags.py
server/app/services/: __init__.py  ai.py  background_task.py  stt.py  tts.py  video.py
server/app/templates/: dashboard.html
server/app/templates/components/: content_list.html  content_row.html
server/app/utils/: __init__.py  fallback_name.py  filename.py  stt.py  video.py  web_parser.py
tui/: main.py  pyproject.toml
