[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "faster-whisper>=1.2.1",
    "litellm>=1.93.0",
    "piper-tts>=1.5.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.39",
    "yt-dlp>=2026.7.4",
]
